# svgr2

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vitest.config.mts
bench/: fixtures.ts  optimize.bench.ts  package.json  (+3 more)
crates/combined/: Cargo.toml
crates/combined/src/: lib.rs
crates/combined/src/snapshots/: combined__tests__optimises_then_transforms_in_one_call.snap
crates/oxc-transform-svg-jsx/: Cargo.toml
crates/oxc_transform_svg_jsx/: Cargo.toml
crates/oxc_transform_svg_jsx/src/: json_options.rs  lib.rs
crates/oxc_transform_svg_jsx/src/passes/: add_jsx_attribute.rs  ast.rs  attributes.rs  mod.rs  post.rs  remove_jsx_attribute.rs  remove_jsx_empty_expression.rs  replace_jsx_attribute_value.rs  sink.rs  sink_add_jsx_attribute.rs  sink_remove_jsx_attribute.rs  sink_replace_jsx_attribute_value.rs  sink_svg_em_dimensions.rs  svg_dynamic_title.rs  svg_em_dimensions.rs  transform_react_native_svg.rs
crates/oxc_transform_svg_jsx/src/snapshots/: oxc_transform_svg_jsx__tests__dimensions_false_removes_source_dimensions_before_adding_svg_props.snap  oxc_transform_svg_jsx__tests__keeps_structured_svg_attributes_as_strings.snap  oxc_transform_svg_jsx__tests__native_drops_unsupported_subtrees_during_sink_time.snap  oxc_transform_svg_jsx__tests__native_keeps_dynamic_title_fallback_when_title_prop_is_enabled.snap  oxc_transform_svg_jsx__tests__native_preserves_existing_uppercase_svg_root.snap  oxc_transform_svg_jsx__tests__parses_previous_export_as_statements.snap  oxc_transform_svg_jsx__tests__preserves_mapping_and_normalization_after_lazy_string_paths.snap  oxc_transform_svg_jsx__tests__replace_attr_values_applies_to_source_and_added_svg_attributes.snap  oxc_transform_svg_jsx__tests__supports_automatic_runtime_and_dimensions_false.snap  oxc_transform_svg_jsx__tests__supports_icon_and_replace_values.snap  oxc_transform_svg_jsx__tests__supports_native.snap  oxc_transform_svg_jsx__tests__supports_ref_memo_named_export_and_previous_export.snap  oxc_transform_svg_jsx__tests__supports_title_and_desc_props.snap  oxc_transform_svg_jsx__tests__supports_typescript_props.snap  oxc_transform_svg_jsx__tests__transforms_simple_svg.snap
crates/oxc_transform_svg_jsx_options/: Cargo.toml
crates/oxc_transform_svg_jsx_options/src/: lib.rs
crates/oxc_transform_svg_jsx_options/src/snapshots/: oxc_transform_svg_jsx_options__tests__supports_json_options_for_wrappers.snap
(+112 files in other folders)
