[workspace]
members = [
  "crates/*",
  "packages/combined-napi",
  "packages/combined-wasm",
  "packages/oxc-transform-svg-jsx-napi",
  "packages/oxc-transform-svg-jsx-wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
insta = "1"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
