[package]
name = "oxc_transform_svg_jsx"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Transform SVG code into JSX code with Oxc"

[dependencies]
svg-parser = { path = "../svg-parser" }
thiserror = "2"
oxc_allocator = "0.137"
oxc_ast = "0.137"
oxc_codegen = "0.137"
oxc_span = "0.137"
