[package]
name = "oxc_transform_svg_jsx"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Transform SVG code into JSX code with Oxc"

[dependencies]
oxc_allocator = "0.133.0"
oxc_ast = "0.133.0"
oxc_codegen = "0.133.0"
oxc_parser = "0.133.0"
oxc_span = "0.133.0"
svg_parser = { path = "../svg_parser" }
thiserror = "2.0.18"
