[package]
name = "oxc_transform_svg_jsx_options"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Parse serialized options for oxc_transform_svg_jsx"

[dependencies]
oxc_transform_svg_jsx = { path = "../oxc_transform_svg_jsx" }
serde = { workspace = true }
serde_json = { workspace = true }
